# delivery-service-task

./: README.md  alembic.ini  docker-compose.yaml  pyproject.toml
docker/: api.Dockerfile  celery.Dockerfile
docs/: task.md
envs/: delivery.env.example  local.delivery.env.example  mysql.env.example
requirements/: requirements.tests.txt  requirements.txt
scripts/: export_env.sh  format.sh  tests.sh
src/: __init__.py  main.py  routes.py
src/alembic/: env.py
src/alembic/versions/: 2025_04_11_234916-5314c4fc96b8_init.py  2025_04_12_131947-5e2163dcb26a_init.py
src/backgrounds/: __init__.py  celery.py
src/backgrounds/tasks/: __init__.py  register_package.py  some_task.py
src/config/: connections.py  logging.py  settings.py
src/package/: routes.py
src/package/routers/: package.py
src/sessions/: routes.py
src/sessions/constraints/: session.py
src/sessions/dependencies/: cookie.py  session.py
src/sessions/exceptions/: cookie.py  session.py
src/sessions/models/: __init__.py  session.py
src/sessions/repositories/: session.py
src/sessions/routers/: session.py
src/sessions/schemas/: session.py
src/sessions/services/: session.py
src/sessions/utils/: cookie.py  session.py
src/utils/: cache.py  constraints.py  database.py  dependencies.py  exceptions.py  helpers.py  models.py  pagination.py  repository.py  responses.py
tests/: conftest.py
tests/resources/: cbr.json
tests/routes/: conftest.py  test_dummy.py  test_package_list.py  test_registration.py
tests/unit/: test_models.py
