[tool.poetry]
name = "delivery-service-task"
version = "0.1.0"
description = ""
authors = ["entity27 <mailforinform@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
aiomysql = "^0.2.0"
pydantic-settings = "^2.8.1"
redis = "^5.2.1"
rabbitmq = "^0.2.0"
celery = "^5.5.1"
cryptography = "^44.0.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.4"
pre-commit = "^4.2.0"
types-redis = "^4.6.0.20241004"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
pythonpath = "."

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]
disable_error_code = [
    "import-untyped"
]
explicit_package_bases = true

[tool.ruff]
target-version = "py311"
exclude = ["alembic"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
